--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <div class="title">brozas</div>
-    <div class="poem">the women come and go, talking of michaelangelo </br> but the fish in the sea, aren't closer than you and me </br> like sharp blades of grass, our eyes dart and dash </br> brown eyes scare me more than blue marbles do </div>
-    <div id="app"></div>
+    <div id="stack"></div>
     <script type="module" src="src/script.js"></script>
   </body>
 </html>
